[package]
name = "solana-foundry"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0"
solana-sdk = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
prettytable-rs = "0.10.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
